# erp-process-intelligence

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/reference/: activity_stage_mapping.json
docs/: architecture.md  data_dictionary.md  decision_log.md  kpi_catalog.md  limitations.md  modeling_notes.md  runbook.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/outputs/screenshots/: .gitkeep
frontend/public/data/: automation_candidates.json  bottlenecks.json  case_summaries.json  company_benchmarks.json  compliance_summary.json  executive_kpis.json  process_flow.json  sla_risk.json  variants.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useData.ts
frontend/src/pages/: AutomationCandidates.tsx  BottleneckExplorer.tsx  CaseDrilldown.tsx  ComplianceCenter.tsx  ExecutiveOverview.tsx  (+3 more)
outputs/: profiling_report.md
scripts/: export_for_frontend.py  profile_data.py  run_pipeline.py
src/: config.py
src/analytics/: automation_scoring.py  conformance.py  predictive.py  process_discovery.py  resource_analysis.py  throughput.py
src/gold/: dimensions.py  facts.py  mart_builder.py
src/ingestion/: bronze_writer.py  xes_parser.py
src/pipeline/: runner.py
src/quality/: data_checks.py  schemas.py
src/transformation/: flow_type_classifier.py  resource_classifier.py  silver_builder.py  temporal_enrichment.py
tests/: conftest.py  test_analytics.py  test_gold.py  test_ingestion.py  test_quality.py  test_silver.py
(+8 files in other folders)
