[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erp-process-intelligence"
version = "0.1.0"
description = "ERP Procure-to-Pay Process Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=0.10",
    "pandera[polars]>=0.20",
    "pm4py>=2.7",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PT"]
ignore = ["B008", "PT011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: tests that require actual data files (bronze/silver/gold parquet). Skipped in CI.",
]
